modules/security/main.tf
resource "aws_security_group" "bastion_sg" {
  name        = "${var.project_name}-sg-bastion"
  description = "Bastion / NAT SSH access"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH from admin IP"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [var.admin_ip] # ÖRN: "1.2.3.4/32"
  }

  egress {
    description = "Allow all outbound (NAT)"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-bastion-sg"
  }
}
resource "aws_security_group" "private_ec2_sg" {
  name        = "${var.project_name}-sg-private-ec2"
  description = "Private EC2 (On-Prem) access"
  vpc_id      = var.vpc_id

  ingress {
    description     = "SSH from Bastion"
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.bastion_sg.id]
  }

  egress {
    description = "Outbound via NAT"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.project_name}-private-ec2-sg"
  }
}
